mock pgn function  &schema update

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.0",
     "chess": "^1.2.2",
     "chess.js": "^1.2.0",
     "cors": "^2.8.5",
@@ -22,8 +21,9 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.18",
-    "prisma": "^6.7.0",
+    "prisma": "^6.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "description": ""
 }
