--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "stage": "tsc && git status && git add .",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build" : "tsc"
   },
   "keywords": [],
   "author": "",
