--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "stage": "tsc && git status && git add .",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build" : "tsc"
+    "build" : "tsc",
+    "start" : "node dist/index.js"
+    
   },
   "keywords": [],
   "author": "",
